--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "refs-demo-project",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://jeerawut97.github.io/react-project-management/",
   "type": "module",
   "scripts": {
     "dev": "vite",
